--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tsc",
     "dev": "ts-node src/index.ts",
     "start": "node dist/index.js",
+    "prepare": "echo preparing && npm run build",
     "type-check": "tsc --noEmit",
     "lint": "eslint src --ext .ts",
     "test": "jest"
